# strictly_python

./: Makefile  README.md  hello.py  pyproject.toml
scripts/: bad_example.py  fibonacci_benchmark.py
strict_python/: __init__.py  strict_python.py
strictly_python/: __init__.py  strictly_python.py
tests/acceptance/: test_user_behavior.py
