[project]
name = "strictly_python"
version = "0.1.0"
description = "Adds the @strict decorator to Python for strict typing & performance."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "numba>=0.61.2",
]

[dependency-groups]
dev = [
    "numpy>=2.2.6",
    "pytest>=8.4.1",
    "ruff>=0.12.8",
]

[tool.uv]
default-groups = ["dev"]

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["strictly_python*"]
